src/main/java/com/example/allknuauth/global/exception/errors/FcmClientFailedException.java
package com.example.allknuauth.global.exception.errors;

public class FcmClientFailedException extends RuntimeException {
}
